feat: реализация ТЗ15